<resources>
    <string name="app_name">FoxTree</string>
    <string name="title_home">Мой профиль</string>
    <string name="title_events">События</string>
    <string name="title_courses">Курсы</string>
    <string name="title_articles">Статьи</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="members">%1$d / %2$d</string>
    <string name="name_sample">Искусство и наука: Проект VITAE - множество отпечатков ладони на лунном цветке</string>
    <string name="big_text_sample">hjbhh</string>
    <string name="sample_person_name">Илон Маск</string>
    <string name="sample_role">Студент</string>
    <string name="links">Ссылки</string>
    <string name="email">Почта</string>
    <string name="vk_sample">\@k_arra</string>
    <string name="tg_sample">\@k_arra</string>
    <string name="email_sample">l0gark@ya.ru</string>
    <string name="title_knowing">Знаю</string>
    <string name="title_like">Интересно</string>
    <string name="sample_members_count_course">10 / 20</string>
    <string name="sample_course_name">Разработка под IOS</string>
    <string name="sample_place">СПбПУ, ГЗ, 237</string>
    <string name="edit">Редактировать</string>
    <string name="add_record">Добавить запись</string>
    <string name="description">Описание</string>
    <string name="about_course">О Курсе</string>
    <string name="big_text1">Гарантирует durability (отсутствие потерь подтверджённых записей/удалений) даже в случае падения процесса за счёт того,
        что операции модификации подтверджаются только после того, как попадут в write-ahead-log. Устаревшие WAL должны ротироваться, чтобы не занимать лишнее место на диске.</string>
    <string name="big_text2">В "Черном Зеркале" была серия (S2E1), в которой создавали роботов, похожих на умерших людей, используя для обучения историю переписок в социальных сетях.
        Я хочу рассказать, как я попробовал сделать что-то подобное и что из этого получилось. Теории не будет, только практика.
    Идея была простая — взять историю своих чатов из Telegram и на их основе обучить seq2seq сеть,
        способную по началу диалога предсказывать его завершение. Такая сеть может работать в трех режимах:</string>
    <string name="big_text3">Красиво переливаются звёздочки на небе… А в реальности — паровоз спутников запущенных вчера Илоном Маска
        и уже более суток будоражущих умы любителей смотреть в небо последние сутки. Честно признаюсь, в реальности, глазами, выглядит
        очень впечатляюще… Летящее копьё в небе с древком в виде десятков спутников и остриём на солнечном блике. Но все ли спутники
        здоровы? При ближнем рассмотрении записанных кадров удалось обнаружить отличия… далее под катом несколько картинок и наше видео…
Собственно новость, что можно увидеть в наших северных широтах эпическую картину пролёта одновременно не двух-трех, не десятка,
        а десятков спутников, не могла оставить нас равнодушными и… удивительно повезло с погодой, после недели непрерывных дождей
        небо разъяснилось ровно на один час, что бы у нас была хотя бы возможность их увидеть. По этому достав из чемодана дедушку
        Цейса и вооружившись камерой Нева400.
</string>
    <string name="big_text4">Несмотря на то, что США продлили возможность сотрудничества американских компаний с Huawei до августа
        этого года, проблемы у китайцев становятся все более серьезными. На днях Huawei исключили из альянса microSD, с компанией
        прекратили сотрудничество крупнейшие американские, японские и европейские партнеры. Huawei в скором времени может лишиться
        доступа к сервисам Android
        и обновлениям Windows 10, равно как и к самой операционной системе от Microsoft.</string>
    <string name="big_text5">Основатель Telegram Павел Дуров сообщил, что российские власти попытались взломать аккаунты четырёх
        журналистов, освещавших протесты в Екатеринбурге.

Сегодня российские власти пытались взломать четырёх журналистов, освещающих протесты в Екатеринбурге. К счастью, все эти попытки
        провалились из-за двухэтапной аутентификации, — написал он в своём телеграм-канале. — Это служит напоминанием о
        том, что авторитарные правительства не остановятся ни перед чем, чтобы нарушить конфиденциальность своих граждан.
        Мы настоятельно призываем пользователей в таких странах
        дважды проверить наличие двухэтапной проверки. Оставайтесь в безопасности и будьте сильными!
    </string>
    <string name="place">Место положение</string>
    <string name="contacts">Контакты</string>
    <string name="sample_members_count_event">10</string>
    <string name="sample_date">10/11/2019</string>
</resources>
