<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_vertical_margin"

    tools:context=".controller.fragment.HomeFragment">

    <TextView
        android:id="@+id/fragment_home__person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_half_vertical_margin"

        android:text="@string/sample_person_name"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/default_text_app_title_size"
        app:layout_constraintBottom_toTopOf="@id/fragment_home__courses"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/fragment_home__courses"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_half_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_home__person_name" />

    <include
        android:id="@+id/fragment_home__articles"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_half_vertical_margin"

        app:layout_constraintTop_toBottomOf="@id/fragment_home__courses" />

    <include
        android:id="@+id/fragment_home__events"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_half_vertical_margin"

        app:layout_constraintTop_toBottomOf="@id/fragment_home__articles" />

    <include
        android:id="@+id/fragment_home__like"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_half_vertical_margin"

        app:layout_constraintTop_toBottomOf="@id/fragment_home__events" />

    <include
        android:id="@+id/fragment_home__knowing"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_half_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_home__like" />


    <TextView
        android:id="@+id/fragment_home__links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"

        android:text="@string/links"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/default_text_app_title_size"

        app:layout_constraintTop_toBottomOf="@id/fragment_home__knowing" />

    <include
        android:id="@+id/fragment_home__vk"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_home__links" />

    <include
        android:id="@+id/fragment_home__tg"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_home__vk" />

    <TextView
        android:id="@+id/fragment_home__text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="@dimen/default_vertical_margin"

        android:text="@string/email"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/default_text_app_title_size"

        app:layout_constraintTop_toBottomOf="@id/fragment_home__tg" />

    <include
        android:id="@+id/fragment_home__email"
        layout="@layout/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_vertical_margin"
        android:layout_marginBottom="@dimen/default_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_home__text_email" />

</android.support.constraint.ConstraintLayout>
