<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activity.ArticleActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_article__coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_article__app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/activity_article__collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/activity_article__collapse_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/activity_article__image_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/huge_icon_size"
                        android:layout_marginBottom="@dimen/default_half_vertical_margin"
                        android:fitsSystemWindows="true"
                        android:gravity="center"
                        android:text="@string/sample_course_name"

                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toTopOf="@id/activity_article__author"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/colorPrimary"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_article__author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        android:layout_marginBottom="@dimen/default_half_vertical_margin"
                        android:text="@string/sample_person_name"
                        android:textAppearance="?attr/textAppearanceListItem"

                        android:textSize="@dimen/default_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/activity_article__date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_horizontal_margin"
                        android:layout_marginBottom="@dimen/default_half_vertical_margin"
                        android:text="@string/sample_date"
                        android:textAppearance="?attr/textAppearanceListItem"

                        android:textSize="@dimen/default_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="spread_inside" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/big_icon_size"
                        android:layout_height="@dimen/big_icon_size"
                        android:src="@drawable/article_sample"
                        app:border_width="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>


                <android.support.v7.widget.Toolbar
                    android:id="@+id/activity_article__toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_app_title_size" />

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_vertical_margin"
                    android:text="@string/big_text"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/default_text_size" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_vertical_margin">

                    <ImageView
                        android:id="@+id/activity_article__minus"
                        android:layout_width="@dimen/little_icon_size"
                        android:layout_height="@dimen/little_icon_size"
                        android:src="@drawable/ic_minus"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="@dimen/default_vertical_margin"

                        />

                    <ImageView
                        android:id="@+id/activity_article__rate_view"
                        android:layout_width="@dimen/little_icon_size"
                        android:layout_height="@dimen/little_icon_size"
                        android:src="@drawable/ic_green_top"
                        app:layout_constraintStart_toEndOf="@id/activity_article__minus"
                        android:layout_marginStart="@dimen/default_horizontal_margin"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_article__rate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/little_icon_size"
                        android:src="@drawable/ic_minus"
                        android:text="+70"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textSize="@dimen/default_text_size"
                        android:gravity="center"
                        app:layout_constraintStart_toEndOf="@id/activity_article__rate_view"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="@dimen/default_vertical_margin"
                        />

                    <ImageView
                        android:id="@+id/activity_article__plus"
                        android:layout_width="@dimen/little_icon_size"
                        android:layout_height="@dimen/little_icon_size"
                        android:src="@drawable/plus"
                        app:layout_constraintStart_toEndOf="@id/activity_article__rate_text"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="@dimen/default_vertical_margin"

                        />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>